feat： 统一logger，优化二维码打印，登录超时重试，非标准HTTP状态行处理

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-build/*
-dist/*
-tests/*
-itchat.egg-info/*
+build/
+dist/
+tests/
 *.pyc
 *.pkl
 *.swp
@@ -11,3 +10,4 @@ QR.jpg
 .DS_Store
 myexample
 .idea
+VChat.egg-info/
